<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:id="@+id/text_label_enter_new_project_name"
        style="@style/text_on_secondary.h4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_new_project_name" />

    <EditText
        android:id="@+id/edit_new_project_name"
        style="@style/text_on_secondary.h4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Amazing project 1" />
    <TextView
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_label_busy_name"
        style="@style/text_on_secondary.h7"
        tools:text="@string/this_name_is_busy"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/button_new_project_with_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create" />

</LinearLayout>