<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_label_your_projects"
        style="@style/text_on_secondary.h6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_projects"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_upload_all_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_new_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_your_projects" />


    <TextView
        android:visibility="gone"
        android:id="@+id/text_label_no_projects_yet"
        style="@style/text_on_secondary.h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_projects_yet"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_your_projects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_your_projects" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recycler_your_projects"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_new_project"
        app:layout_constraintTop_toBottomOf="@+id/text_label_your_projects"
        android:layout_marginVertical="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_your_project"/>




    <Button
        android:id="@+id/button_new_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>